@startuml
enum PlantState {
    Bare= 0,
    Seed= 1,
    Growing= 2,
    Grown= 3,
    Fruit= 4,
}
class FarmScript {
    + plantSeeds(t_plant:GameObject) : void
    + setFruitType(t_plant:GameObject) : void
    + makeWatered() : void
}
MonoBehaviour <|-- FarmScript
FarmScript --> "seeds" GameObject
FarmScript --> "growingPlant" GameObject
FarmScript --> "dryMat" Material
FarmScript --> "wetMat" Material
FarmScript --> "plantState" PlantState
@enduml
